Demo made responsive, calendar fixed for landscape

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet">
 
   <link rel="stylesheet" href="../dist/material-datetime-picker.css">
-
+  <meta name="viewport" content="width=device-width">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -19,12 +19,12 @@
       text-transform: capitalize;
       font-weight: 600;
       display: inline-block;
-      line-height: 36px;
+      line-height: 25px;
       cursor: pointer;
       text-align: center;
       text-transform: uppercase;
       min-width: 88px;
-      height: 36px;
+      height: 25px;
       margin: 10px 8px;
       padding: 0 8px;
       text-align: center;
@@ -55,8 +55,7 @@
       box-shadow: none;
     }
 
-  </style>
-</head>
+  </style></head>
 <body>
 
   <a class="c-btn c-datepicker-btn">
